--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Build Develop branch
 
 # Controls when the workflow will run
 on:
@@ -27,10 +27,25 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Run image
+      - name: Install Poetry
         uses: abatilo/actions-poetry@v2.0.0
-      - name: View poetry --help
-        run: poetry --help
+        with:
+          poetry-version: 1.1.8
+      - name: Bump alpha version
+        run: poetry version prerelease
+      - name: Install l2ss-py
+        run: poetry install -E harmony
+      - name: Lint
+        run: |
+          poetry run pylint podaac
+          poetry run flake8 podaac
+      - name: Test and coverage
+        run: poetry run pytest --cov=podaac/ --cov-report=xml -m "not aws and not integration" tests/
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
